fixed scrolling gap and added content

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+html{
+  /* TODO: Does not work in safari */
+  
+  scroll-behavior: smooth;
+}
+
 :root {
   --black: #000000;
   --white: #ffffff;
@@ -42,6 +48,7 @@ div.scroll-down-arrow {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: max-content;
   bottom: 5vh;
 }
 
@@ -102,8 +109,15 @@ body {
 
 /* Padding */
 .ps {
-  padding: 20px;
+  padding: 5px;
 }
 
+.pm{
+  padding: 20px
+}
 
+/* Colors */
+.disabled{
+  color: var(--dark-grey);
+}
 
